# chash

./: README.md  chash.php  config.m4
libchash/: .gitignore  Makefile.am  bootstrap.sh  configure.ac  libchash.pc.in
libchash/debian/: changelog  control  rules
libchash/libchash/: .gitignore  Makefile.am  chash.c  chash.h  chash_test.c  sort_common.h
php/: Makefile.chash  chash.c  chash_test.php  config.cmake  config.m4  ext_chash.php  php_chash.ini
php/debian/: changelog  chash.ini  control  php5-chash.postinst  php5-chash.postrm  rules
python/: Makefile  chash.c  setup.py  test.py
python/ctypes/: chash.py
python/debian/: changelog  control
